--- a/src/endsars.html
+++ b/src/endsars.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>#EndSARS - Timeshot</title>
+    <meta name="description" content="Tweets of Cases, Protests, Supports, and Concerns toward ending Police Brutality in Nigeria">
     <link rel="stylesheet" href="/styles/endsars.css">
 </head>
 
