--- a/src/endsars.html
+++ b/src/endsars.html
@@ -7,6 +7,7 @@
     <title>#EndSARS - Timeshot</title>
     <meta name="description" content="Tweets of Cases, Protests, Supports, and Concerns toward ending Police Brutality in Nigeria">
     <link rel="stylesheet" href="/styles/endsars.css">
+    <meta name="theme-color" content="#f6fefe" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176103387-3"></script>
